Kubernetecs/Ambel/Static-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-static-service
  namespace: test 
spec:
  selector:
    app: static-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
