Kubernetecs/Ambel/production-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-backend
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-backend
  template:
    metadata:
      labels:
        app: main-backend
    spec:
      containers:
        - name: main-backend
          image: tazul96/ambel:MB-latest
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: dockerhub-secret
      
---
apiVersion: v1
kind: Service
metadata:
  name: main-backend
spec:
  selector:
    app: main-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
