Kubernetecs/Ambel/production-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-frontend
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-frontend
  template:
    metadata:
      labels:
        app: main-frontend
    spec:
      containers:
        - name: main-frontend
          image: tazul96/ambel:PF-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: dockerhub-secret
---
apiVersion: v1
kind: Service
metadata:
  name: main-frontend
  namespace: production  # Make sure the service is in the same namespace as the deployment
spec:
  selector:
    app: main-frontend
  ports:
    - protocol: TCP
      port: 80      # Port exposed by the service
      targetPort: 3000  # Port inside the container
  type: ClusterIP
